# Rational number tests
add_executable( rational_number_tests rational_number_tests.cpp )
if( ENABLE_IWYU )
  set_property( TARGET rational_number_tests PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path} )
endif()

target_link_libraries( rational_number_tests scisim )

add_test( rational_scalar_00 rational_number_tests scalar_00 )
add_test( rational_scalar_01 rational_number_tests scalar_01 )
add_test( rational_scalar_02 rational_number_tests scalar_02 )
add_test( rational_scalar_03 rational_number_tests scalar_03 )
add_test( rational_scalar_04 rational_number_tests scalar_04 )
add_test( rational_scalar_05 rational_number_tests scalar_05 )
add_test( rational_integer_00 rational_number_tests integer_00 )
add_test( rational_integer_01 rational_number_tests integer_01 )
add_test( rational_rational_00 rational_number_tests rational_00 )
add_test( rational_rational_01 rational_number_tests rational_01 )
add_test( rational_rational_02 rational_number_tests rational_02 )
add_test( rational_multiply_00 rational_number_tests int_multiply_00 )
add_test( rational_multiply_01 rational_number_tests int_multiply_01 )
add_test( rational_divide_00 rational_number_tests int_divide_00 )
add_test( rational_divide_01 rational_number_tests int_divide_01 )
add_test( rationa_equal_00 rational_number_tests equal_00 )
add_test( rationa_equal_01 rational_number_tests equal_01 )
add_test( rationa_equal_02 rational_number_tests equal_02 )
add_test( rationa_not_equal_00 rational_number_tests not_equal_00 )
add_test( rationa_not_equal_01 rational_number_tests not_equal_01 )


# String utility tests
add_executable( string_utility_tests string_utility_tests.cpp )
if( ENABLE_IWYU )
  set_property( TARGET string_utility_tests PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path} )
endif()

target_link_libraries( string_utility_tests scisim )

add_test( string_trim_character_right_00 string_utility_tests trim_character_right_00 )
add_test( string_trim_character_right_01 string_utility_tests trim_character_right_01 )
add_test( string_trim_character_right_02 string_utility_tests trim_character_right_02 )
add_test( string_trim_character_right_03 string_utility_tests trim_character_right_03 )
add_test( string_trim_character_right_04 string_utility_tests trim_character_right_04 )
add_test( string_remove_whitespace_00 string_utility_tests remove_whitespace_00 )
add_test( string_remove_whitespace_01 string_utility_tests remove_whitespace_01 )
add_test( string_remove_whitespace_02 string_utility_tests remove_whitespace_02 )
add_test( string_zero_pad_00 string_utility_tests zero_pad_00 )
add_test( string_zero_pad_01 string_utility_tests zero_pad_01 )
add_test( string_split_test_00 string_utility_tests split_test_00 )
add_test( string_split_test_01 string_utility_tests split_test_01 )
add_test( string_split_test_02 string_utility_tests split_test_02 )
add_test( string_split_test_03 string_utility_tests split_test_03 )
add_test( string_split_test_04 string_utility_tests split_test_04 )
add_test( string_split_test_05 string_utility_tests split_test_05 )
add_test( string_characters_to_right_00 string_utility_tests characters_to_right_00 )
add_test( string_characters_to_right_01 string_utility_tests characters_to_right_01 )
add_test( string_characters_to_right_02 string_utility_tests characters_to_right_02 )
add_test( string_characters_to_right_03 string_utility_tests characters_to_right_03 )
add_test( string_characters_to_right_04 string_utility_tests characters_to_right_04 )
add_test( string_characters_to_right_05 string_utility_tests characters_to_right_05 )
add_test( string_characters_to_right_06 string_utility_tests characters_to_right_06 )
add_test( string_trim_left_00 string_utility_tests trim_left_00 )
add_test( string_trim_left_01 string_utility_tests trim_left_01 )
add_test( string_trim_left_02 string_utility_tests trim_left_02 )
add_test( string_trim_right_00 string_utility_tests trim_right_00 )
add_test( string_trim_right_01 string_utility_tests trim_right_01 )
add_test( string_trim_right_02 string_utility_tests trim_right_02 )
add_test( string_trim_00 string_utility_tests trim_00 )
add_test( string_trim_01 string_utility_tests trim_01 )
add_test( string_trim_02 string_utility_tests trim_02 )
add_test( string_trim_03 string_utility_tests trim_03 )
add_test( string_trim_04 string_utility_tests trim_04 )
add_test( string_tokenize_00 string_utility_tests tokenize_00 )
add_test( string_tokenize_01 string_utility_tests tokenize_01 )
add_test( string_tokenize_02 string_utility_tests tokenize_02 )
add_test( string_tokenize_03 string_utility_tests tokenize_03 )
add_test( string_tokenize_04 string_utility_tests tokenize_04 )
add_test( string_tokenize_05 string_utility_tests tokenize_05 )
add_test( string_tokenize_06 string_utility_tests tokenize_06 )
add_test( string_extract_from_string_00 string_utility_tests extract_from_string_00 )
add_test( string_extract_from_string_01 string_utility_tests extract_from_string_01 )
